--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,13 +11,15 @@
     <string name="user_info">个人资料</string>
     <string name="system_set">系统设置</string>
     <string name="report_example">报告示例</string>
-    <string name="hint_input_phone">请输入手机号</string>
+    <string name="hint_input_phone">请输入手机号码</string>
     <string name="hint_current_phone">当前绑定手机号</string>
     <string name="hint_input_authcode">请输入验证码</string>
     <string name="hint_input_report_name">请输入体检报告真实姓名</string>
+    <string name="error_input_phone">请输入正确的手机号码！</string>
     <string name="get_authcode">获取验证码</string>
-    <string name="login">登录</string>
+    <string name="reget_authcode">秒后重新获取</string>
     <string name="cancel">取消</string>
+    <string name="login">登  录</string>
     <string name="quit">退出登录</string>
     <string name="confirm">确认</string>
     <string name="register">注册</string>
@@ -25,6 +27,9 @@
     <string name="bind_phone">绑定手机</string>
 
     <string name="consult_warning">健管师的回复内容仅作为建议，具体诊疗请前往医院进行</string>
+    <string name="scale_down_show_behavior">com.ihaozuo.plamexam.view.consult.behavior.ScaleDownShowBehavior</string>
+    <string name="scale_up_show_behavior">com.ihaozuo.plamexam.view.consult.behavior.ScaleUpShowBehavior</string>
+    <string name="swipe_dismiss_behavior">android.support.design.widget.SwipeDismissBehavior</string>
 
     <string name="phone">手机号</string>
     <string name="photo">头像</string>
@@ -41,7 +46,6 @@
     <string name="bind">绑定</string>
     <string name="unbind">未绑定</string>
     <string name="binded">已绑定</string>
->>>>>>> bcb5fcb713709bd9cf25d0ac64b99f027de5b3f0
     <string name="no_data">暂无数据</string>
 
 
