--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="hint_current_phone">当前绑定手机号</string>
     <string name="hint_input_authcode">请输入验证码</string>
     <string name="hint_input_report_name">请输入体检报告真实姓名</string>
+    <string name="hint_advice">请留下你的宝贵的意见，我们将不断完善...</string>
     <string name="error_input_phone">请输入正确的手机号码！</string>
     <string name="get_authcode">获取验证码</string>
     <string name="reget_authcode">秒后重新获取</string>
@@ -35,6 +36,8 @@
     <string name="hint_grade">您对此次服务的总评价</string>
     <string name="commit_grade">提交评价</string>
     <string name="report">体检报告</string>
+    <string name="add_report">添加报告</string>
+    <string name="health_consult">健康咨询</string>
 
     <string name="consult_warning">健管师的回复内容仅作为建议，具体诊疗请前往医院进行</string>
     <string name="scale_down_show_behavior">com.ihaozuo.plamexam.view.consult.behavior.ScaleDownShowBehavior</string>
